ceph (0.26~rc-1) experimental; urgency=low

  * Make ceph x86 and x64 only due to dependency on architecture dependent
    google-perftools (closes: #614890).
  * Correct section of libcrush1, librados1, librbd1 and libceph1 to libs.
  * Make Ceph cross buildable (closes: #618939), thanks to Hector Oron.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.hu>  Mon, 21 Mar 2011 11:34:02 -0800

ceph (0.25.1-1) experimental; urgency=low

  * New upstream release 

 -- Sage Weil <sage@newdream.net>  Mon, 14 Mar 2011 14:43:47 -0700

ceph (0.25-1) experimental; urgency=low

  * New upstream release 

 -- Sage Weil <sage@newdream.net>  Fri, 04 Mar 2011 14:39:54 -0800

ceph (0.24.3-1) experimental; urgency=low

  * New upstream release 

 -- Sage Weil <sage@newdream.net>  Thu, 10 Feb 2011 09:14:00 -0800

ceph (0.24.2-1) experimental; urgency=low

  * New upstream release. 

 -- Sage Weil <sage@newdream.net>  Mon, 24 Jan 2011 11:02:24 -0800

ceph (0.24.1-1) experimental; urgency=low

  * New upstream release. 

 -- Sage Weil <sage@newdream.net>  Fri, 07 Jan 2011 16:49:48 -0800

ceph (0.24-1) experimental; urgency=low

  * New upstream release.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.hu>  Wed, 01 Dec 2010 09:26:25 -0800

ceph (0.23.1-1) experimental; urgency=low

  * Initial release (Closes: #506040)

 -- Sage Weil <sage@newdream.net>  Sun, 21 Nov 2010 15:22:21 -0800