@@ -4,6 +4,8 @@ ceph (0.26~rc-1) experimental; urgency=low
     google-perftools (closes: #614890).
   * Correct section of libcrush1, librados1, librbd1 and libceph1 to libs.
   * Make Ceph cross buildable (closes: #618939), thanks to Hector Oron.
+  * Disable libatomic-ops on ARMv4t (armel) archs to prevent FTBFS
+    (closes: #615235), thanks go to Hector Oron again.
 
  -- Laszlo Boszormenyi (GCS) <gcs@debian.hu>  Mon, 21 Mar 2011 11:34:02 -0800
 
